objects/EUR_CRM_Contract_Account_Mapping__c.object
<CustomObject>
    <description>Link between a Contract to a Parent Account and it&apos;s children accounts</description>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <label>Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipName>Contract_Sub_Chains_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Active__c</fullName>
        <formula>ISPICKVAL(EUR_CRM_Contract__r.EUR_CRM_Status__c, &apos;Activated&apos;) &amp;&amp;
ISPICKVAL(EUR_CRM_Account__r.EUR_CRM_Status__c, &apos;Active&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>EUR_CRM_Contract__c</referenceTo>
        <relationshipName>Contract_Sub_Chains_Mappings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Contract - Account Mapping (EU)</label>
    <nameField>
        <displayFormat>CAM-{0000000000}</displayFormat>
        <label>Contract - Account Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract - Account Mapping (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_FI_Contract_Account_Mapping</fullName>
        <active>true</active>
        <label>EUR FI Contract - Account Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Contract_Account_Mapping</fullName>
        <active>true</active>
        <label>EUR ZA Contract - Account Mapping</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>